--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "lodash": "4.17.4",
     "minimist": "1.2.0",
     "modbus-serial": "7.0.3",
+    "moment": "^2.20.1",
+    "morgan": "^1.9.0",
     "pug": "2.0.0-rc.4",
     "socket.io": "2.0.4",
     "socket.io-client": "2.0.4",
