using async for reading out data

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Christian Kuster",
   "license": "MIT",
   "dependencies": {
+    "async": "2.6.0",
     "compression": "1.7.1",
     "express": "4.16.2",
     "lodash": "4.17.4",
