--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "modbus-client",
-  "version": "0.0.1",
-  "description": "Modbus client",
+  "version": "0.9.0",
+  "description": "Modbus dashboard",
   "main": "server.js",
   "directories": {
     "lib": "lib"
