--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "2.6.0",
+    "body-parser": "1.18.2",
     "compression": "1.7.1",
     "express": "4.16.2",
     "lodash": "4.17.4",
